--- a/libft/Makefile
+++ b/libft/Makefile
@@ -11,7 +11,8 @@ SRC		= ft_memset.c ft_bzero.c ft_memcpy.c ft_memccpy.c ft_memmove.c \
 		  ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c
 HEADER	= libft.h
 SRC_B	= ft_lstnew.c ft_lstadd_front.c ft_lstsize.c ft_lstlast.c \
-		  ft_lstadd_back.c ft_lstdelone.c ft_lstclear.c ft_lstiter.c ft_lstmap.c
+		  ft_lstadd_back.c ft_lstdelone.c ft_lstclear.c ft_lstiter.c ft_lstmap.c \
+		  ft_cntwords_bonus.c
 OBJS	= $(SRC:.c=.o)
 OBJS_B	= $(SRC_B:.c=.o)
 CC		= gcc
